--- a/halligalli.css
+++ b/halligalli.css
@@ -10,7 +10,14 @@ html, body {
   cursor:default;
 }
 
+main{
+  width:100%;
+}
+
+/*navigation bar*/
 .navbar{
+  margin:0;
+  padding:0;
   width:100%;
   background-color: #bb98dd;
   z-index:5;
@@ -18,69 +25,223 @@ html, body {
   top:0%
 
 }
-.navbar ul {
-  display: flex;
-  justify-content: space-between;
-  list-style-type: none;
-  position:relative;
+  .navbar ul {
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+    position:relative;
+  }
+
+  .navbar ul li a {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    color: #000000;;
+    padding: 0.5em 0.5em;
+    font-size: 20px;
+    text-decoration: none;
+    font-weight: bold;
+  }
+
+  .navbar ul li a:hover {
+    background-color: #5226EF;
+    color:#ffffff;
+    font-weight: bold;
+    cursor:pointer;
 }
 
-.navbar ul li a {
-  display:flex;
-  flex-direction: column;
-  align-items: center;
-  color: #000000;;
-  padding: 0.5em 0.5em;
-  font-size: 20px;
-  text-decoration: none;
-  font-weight: bold;
+
+
+
+/*HOME__herographics*/
+  div.graphic-container{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    width:100%;
+    height:100vw;
+    overflow:hidden;
+  }
+
+    div.graphic-container-inner{
+      position:relative;
+      width:100%;
+      height:100%;
+      overflow: hidden;
+    }
+
+      div.graphic-container-inner img{
+        position:absolute;
+        width:100%;
+        overflow:hidden;
+        top:0;
+        left:0;
+        object-fit: cover;
 }
 
-.navbar ul li a:hover {
-  background-color: #5226EF;
-  color:#ffffff;
-  font-weight: bold;
-  cursor:pointer;
+
+
+
+
+
+/*INSTRUCTION__marquee banner*/
+  .marquee{
+    width:100%;
+    max-width: 100%;
+    margin: 0 0;
+    padding:0;
+    white-space:nowrap;
+    overflow:clip;
+    overflow-clip-margin: border-box;
+  }
+    .marquee span{
+      font-family: "Jaro";
+      font-weight:400;
+      color:#ffbecf;
+      font-size:20rem;
+      text-transform:uppercase;
+      display:inline-block;
+      animation:marquee-animation 85s linear infinite;
+    }
+
+      @keyframes marquee-animation {
+        0% {
+          transform: translate (0,0);
+        }
+        100%{
+          transform:translate(-100%,0);
+        }
 }
 
-main.homepage-main {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
+
+
+/*INSTRUCTION__hero message*/
+  .hero-message {
+    width:100%;
+  }
+  .hero-message h1{
+    text-align: center;
+    padding:2em 5em;
 }
 
-section.homepage-content {
-  width:100%;
-  margin-top:-30em;
-  background-color: #ffefef21;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 
+
+/*INSTRUCTION__card animation*/
+  .cards{
+    position:relative;
+    margin-top:8em;
+    margin-bottom:22em;
+    width:100%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
+  }
+    .card {
+      position:absolute;
+      width:127.5px;
+      height:200.75px;
+      background-color: #d6d6d6;
+      border-radius:10px;
+      display:flex;
+      justify-content: center;
+      align-items: center;
+      color:rgba(0, 0, 0, 1);
+      border:none;
+      transition:.5s;
+      transform-origin:50% 100%;
+      overflow:hidden;
+      cursor:pointer;
+
+    }
+    .cards:hover .card{
+      transform:rotate(calc(var(--i)*5deg))
+                translate(calc(var(--i)*120px));
+    }
+    .card:active{
+      translate:calc(var(--i)*10px)-40px;
+      transition:0.1s;
+    }
+    .card img{
+      width:127.5px;
+      height:200.75px;
+      object-fit:fill;
 }
 
-.content {
-  width: 100%;
-  max-width: 1200px;
-  height: 400px;
-  margin:0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+
+
+
+/*INSTRUCTION__contents of a Halli Galli game set*/
+    .gamecontent__heading > h2{
+      font-size: 3.2rem;
+      margin-bottom: 1em;
+    }
+    .gamecontent__description{
+      width:70%;
+      margin:0 auto 5em;
+      display:flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+    }
+    .gamecontent__description ul{
+      flex:1;
+      text-align:left;
+      padding-right: 5em;
+    }
+    .gamecontent__description li{
+      list-style-type: square;
+      font-size: 1.2rem;
+      padding-bottom: 1em;
+      color: #F3D0D7;
+    }
+    .gamecontent__img{
+      flex:1;
+      padding-left: 5em;
+    }
+    .gamecontent__img img{
+      height:20vw;
+      object-fit: contain;
 }
 
-.text-block {
-  width: 60%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+
+
+/*INSTRUCTION__BRIEF INTRO*/
+  .briefintro{
+    width:80%;
+    margin:0 auto 5em;
+  }
+  .briefintro > h3{
+    font-size: 1.3rem;
 }
 
-.content h1,
-.content li {
-  text-align: left;
+
+
+
+/*INSTRUCTION__PREPRARATION*/
+#title2 {
+  background-color: #917bfe;
 }
+#title2 > h2 {
+  color:#4422ef;
+}
+.preparation {
+  margin-left: 7em;
+  margin-right: 7em;
+  padding:1em;
+}
+.preparation__title h2 {
+  font-size:3rem;
+  color: #a7a6ff;
+  text-align: center;
+}
+.bodytext{
+  font-size: 1.2rem;
+  color:#f6d886
+  
+}
+
+
 
 .content img {
   width: 35%;
@@ -138,12 +299,13 @@ section.homepage-content {
 
 .heading {
   font-size: 5vw;
-  color: #cb8017;
+  color: #F2994A;
   font-family: "Gabarito", serif;
-  font-weight: 600;
+  font-weight: 800;
   font-size:2.5rem;
   font-style: normal;
   text-align: center;
+  line-height:3rem;
 }
 
 
@@ -161,170 +323,10 @@ footer {
 
 
 
-#gamecontainer{
-  display:flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #3d3d3d;
-}
-
-.gamecontainerimg{
-  margin:0;
-  padding:0;
-}
-.gamecontainerimg img{
-  height:20vw;
-  object-fit: contain;
-}
-
-
 
 main {
   display: flex;
   flex-direction: column;
   margin:1em;
-}
-
-td {
-  border: 3px;
-  padding: 3px;
-  border-style: groove;
-  text-align: center;
-}
-
-table {
-  background-color: #95bbf9;
-  margin-top: 8em;
-  margin-left: 10em;
-}
-
-#description {
-  margin-right: 7em;
-  margin-top: 5em;
-}
-
-
-
-#title2 {
-  background-color: #917bfe;
-  text-align: center;
-}
-#title2 > h2 {
-  color:#4422ef;
-}
-#preparation {
-  margin-left: 7em;
-  margin-right: 7em;
-  padding:1em;
-  background-color: #a7a6ff;
-}
-#title3 {
-  background-color: #f6d886;
-  text-align: center;
-  color: #f2dc6d;
-}
-#game {
-  margin-left: 7em;
-  margin-right: 7em;
-  padding:1em;
-  background-color: #F2994A;
-}
-
-
-.cards{
-  position:relative;
-  margin-top:15em;
-  margin-bottom:25em;
-  width:100%;
-  display:flex;
-  justify-content: center;
-  align-items: center;
-
-}
-
-
-.card {
-  position:absolute;
-  width:127.5px;
-  height:200.75px;
-  background-color: #d6d6d6;
-  border-radius:10px;
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  color:rgba(0, 0, 0, 1);
-  border:none;
-  transition:.5s;
-  transform-origin:50% 100%;
-  overflow:hidden;
-
-}
-
-.cards:hover .card{
-  transform:rotate(calc(var(--i)*5deg))
-            translate(calc(var(--i)*120px));
-}
-
-.card img{
-  width:127.5px;
-  height:200.75px;
-  object-fit:fill;
-}
-
-.marquee{
-  width:100%;
-  max-width: 100%;
-  margin: 0 0;
-  padding:0;
-  white-space:nowrap;
-  overflow:clip;
-  overflow-clip-margin: border-box;
-}
-
-.marquee span{
-  font-family: "Jaro";
-  font-weight:400;
-  color:#ffbecf;
-  font-size:20rem;
-  text-transform:uppercase;
-  display:inline-block;
-  animation:marquee-animation 85s linear infinite;
-}
-
-@keyframes marquee-animation {
-  0% {
-    transform: translate (0,0);
-  }
-  100%{
-    transform:translate(-100%,0);
-  }
-}
-
-
-
-div.graphic-container{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  width:100%;
-  height:100vw;
-  overflow:hidden;
-}
-
-div.graphic-container-inner{
-  position:relative;
-  width:100%;
-  height:100%;
-  overflow: hidden;
-}
-
-div.graphic-container-inner img{
-  position:absolute;
-  width:100%;
-  overflow:hidden;
-  top:0;
-  left:0;
-  object-fit: cover;
 }
 
