--- a/halligalli.css
+++ b/halligalli.css
@@ -9,102 +9,345 @@ body {
   font-family: "Inter", sans-serif;
   color: #f2dc6d;
   cursor: default;
+  scroll-behavior: smooth;
 }
 
 main {
   width: 100%;
 }
 
-/*navigation bar*/
-.navbar {
-  margin: 0;
-  padding: 0;
-  width: 100vw;
-  background-color: #bb98dd;
-  z-index: 5;
-  position: fixed;
-  top: 0%;
-}
-.navbar ul {
-  display: flex;
-  justify-content: space-between;
-  list-style-type: none;
-  position: relative;
+
+
+/*GENERAL__navigation bar*/
+  .navbar {
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    background-color: #bb98dd;
+    z-index: 5;
+    position: fixed;
+    top: 0%;
+  }
+  .navbar ul {
+    display: flex;
+    justify-content: space-around;
+    list-style-type: none;
+    position: relative;
+  }
+
+  .navbar ul li a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #181716;
+    padding: 0.5em 0.5em;
+    font-size: 20px;
+    text-decoration: none;
+    font-weight: bold;
+  }
+
+  .navbar ul li a:hover {
+    background-color: #5226ef;
+    color: #ffffff;
+    font-weight: bold;
+    cursor: pointer;
+    font-style: italic;
 }
 
-.navbar ul li a {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: #000000;
-  padding: 0.5em 0.5em;
-  font-size: 20px;
-  text-decoration: none;
-  font-weight: bold;
+
+
+
+/*GENERAL__FOOTER*/
+  footer {
+    font-family: 'Gabarito';
+    text-align: center;
+    padding: 20px 0;
+    background-color: #5D5FEF;
+    color: rgb(255, 255, 255);
+    position: relative;
+    bottom: 0;
+    width: 100%;
 }
 
-.navbar ul li a:hover {
-  background-color: #5226ef;
-  color: #ffffff;
-  font-weight: bold;
-  cursor: pointer;
-  font-style: italic;
+
+/*GENERAL__FONTS*/
+  .heading {
+    color: #f2994a;
+    font-family: "Gabarito", serif;
+    font-weight: 800;
+    font-size: 3rem;
+    font-style: normal;
+    text-align: center;
+    line-height: 3.2rem;
+  }
+  .heading:hover {
+    color:#f6d886;
+  }
+
+
+  .heading2 {
+    color: #fab855;
+    font-family: "Gabarito", serif;
+    font-weight: 800;
+    font-size: 2rem;
+    font-style: normal;
+    text-align: center;
+    line-height: 3rem;
 }
+
+
+
+/*GENERAL__marquee banner*/
+  .marquee {
+    width: 100%;
+    max-width: 100%;
+    margin: 0 0;
+    padding: 0;
+    white-space: nowrap;
+    overflow: clip;
+    overflow-clip-margin: border-box;
+  }
+  .marquee span {
+    font-family: "Jaro";
+    font-weight: 400;
+    color: #ffbecf;
+    font-size: 20rem;
+    text-transform: uppercase;
+    display: inline-block;
+    animation: marquee-animation 85s linear infinite;
+  }
+  @keyframes marquee-animation {
+    0% {
+      transform: translate (0, 0);
+    }
+    100% {
+      transform: translate(-100%, 0);
+    }
+}
+
+
+
+
+
+/*GENERAL___PRELOADER*/
+  #preloader {
+    position: fixed;
+    inset: 0;
+    z-index: 9999;
+    overflow: hidden;
+    background-color: #181716;
+    transition: all 0.6s ease-out;
+    width: 100%;
+    height: 100vh;
+  }
+  #preloader:before,
+  #preloader:after {
+    content: "";
+    position: absolute;
+    border: 4px solid #FFBECF;
+    border-radius: 50%;
+    animation: animate-preloader 2s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  }
+  #preloader:after {
+    animation-delay: -0.5s;
+  }
+  @keyframes animate-preloader {
+    0% {
+      width: 10px;
+      height: 10px;
+      top: calc(50% - 5px);
+      left: calc(50% - 5px);
+      opacity: 1;
+    }
+
+    100% {
+      width: 72px;
+      height: 72px;
+      top: calc(50% - 36px);
+      left: calc(50% - 36px);
+      opacity: 0;
+    }
+}
+
+
+
+
+
+
+
+
 
 /*HOME__herographics*/
-div.graphic-container {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  width: 100%;
-  height: 100vw;
-  overflow: hidden;
+  div.graphic-container {
+    margin: 0;
+    box-sizing: border-box;
+    width: 100vw;
+    height:100vw;
+    overflow: hidden;
+    z-index: -10;
+  }
+
+  div.graphic-container-inner {
+    position: relative;
+    width: 100%;
+    height: 65%;
+    overflow: hidden;
+  }
+
+  div.graphic-container-inner img {
+    position: absolute;
+    width: 100%;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    object-fit: cover;
 }
 
-div.graphic-container-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
 
-div.graphic-container-inner img {
-  position: absolute;
-  width: 100%;
-  overflow: hidden;
+
+
+/*HOME__KangSan's CSS*/
+header.sticky {
+  position: fixed;
   top: 0;
   left: 0;
-  object-fit: cover;
+  right: 0;
+  background: #181716;
+  z-index: 99;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  animation: slideDown 1s forwards;
 }
-
-/*INSTRUCTION__marquee banner*/
-.marquee {
-  width: 100%;
-  max-width: 100%;
-  margin: 0 0;
-  padding: 0;
-  white-space: nowrap;
-  overflow: clip;
-  overflow-clip-margin: border-box;
-}
-.marquee span {
-  font-family: "Jaro";
-  font-weight: 400;
-  color: #ffbecf;
-  font-size: 20rem;
-  text-transform: uppercase;
-  display: inline-block;
-  animation: marquee-animation 85s linear infinite;
-}
-
-@keyframes marquee-animation {
-  0% {
-    transform: translate (0, 0);
+@keyframes slideDown {
+  from {
+    transform: translateY(-100%);
   }
-  100% {
-    transform: translate(-100%, 0);
+  to {
+    transform: translateY(0);
   }
 }
+
+
+
+/*HOME___MAIN CONTAINER*/
+  .homepage-main {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    margin-top:-30em;
+    box-sizing: border-box;
+  }
+  section {
+    flex-grow: 1;
+    background-color: #181716;
+    width:80%;
+    padding: 2% 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin:0;
+  }
+  .content {
+    width: 100%;
+    max-width: 1200px;
+    height: 400px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 15px;
+    background-color: #181716;
+  }
+  
+  .content h1,
+  .content li {
+    text-align: center;
+  }
+  .content img {
+    width: 35%;
+    height: 500px;
+    max-width: 400px;
+    margin-left: 20px;
+    object-fit: contain;
+  }
+  .with-image img {
+    width: 400px;
+    height: 300px;
+    background-color: #181716;
+    margin: 40px;
+  }
+  .with-image .button {
+    flex: 1;
+    text-align: center;
+    margin: 0;
+  }
+  #quiz .button {
+  text-align: center;
+}
+
+
+  .button a {
+    display: inline-block;
+    padding: 30px 60px;
+    background-color: #ffbecf;
+    color: black;
+    text-decoration: none;
+    border-radius: 15px;
+    font-size: 22px;
+    transition: box-shadow 0.3s, transform 0.3s, scale 0.5s;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  }
+  .button a:hover {
+    background-color: rgb(243, 135, 153);
+    transform: translateY(-5px);
+    scale: 1.05;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+
+
+
+/*HOME__SCROLL ANIMATION*/
+  .slide-up{  
+    opacity: 0;
+    transition: opacity 2s, transform 2.5s;
+    transform: translateY(80%);
+  }
+  .slide-up.alerted{
+    transform: none;
+    opacity: 1;
+  }
+  .slide-left{
+    opacity: 0;
+    transition: opacity 2s, transform 2.5s;
+    transform: translateX(10vw);
+  }
+  .slide-left.alerted{
+    transform: none;
+    opacity: 1;
+  }
+  .slide-right{
+    opacity: 0;
+    transition: opacity 2s, transform 2.5s;
+    transform: translateX(-10vw);
+  }
+  .slide-right.alerted{
+    transform: none;
+    opacity: 1;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /*INSTRUCTION__hero message*/
 .hero-message {
@@ -219,148 +462,96 @@ div.graphic-container-inner img {
   color: #f6d886;
 }
 
-.content img {
-  width: 35%;
-  height: 500px;
-  max-width: 400px;
-  margin-left: 20px;
-}
-
-.with-image img {
-  width: 400px;
-  height: 400px;
-  background-color: #ffefef;
-  margin: 40px;
-}
-
-.with-image .button {
-  flex: 1;
-  text-align: left;
-  margin: 40px;
-}
-
-#quiz .button {
-  text-align: right;
-}
-
-.button a {
-  display: inline-block;
-  padding: 30px 60px;
-  background-color: #f87e97;
-  color: black;
-  text-decoration: none;
-  border-radius: 15px;
-  font-size: 22px;
-  transition: box-shadow 0.3s, transform 0.3s;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-}
-
-.button a:hover {
-  background-color: rgb(255, 141, 160);
-  transform: translateY(-5px);
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-}
-
-#footer-home {
-  text-align: center;
-  padding: 20px 0;
-  background-color: #f3d0d7;
-  color: black;
-  position: relative;
-  bottom: 0;
-  width: 100%;
-}
-
-.heading {
-  color: #f2994a;
-  font-family: "Gabarito", serif;
-  font-weight: 800;
-  font-size: 2.8rem;
-  font-style: normal;
-  text-align: center;
-  line-height: 3.2rem;
-}
-
-.heading:hover {
-  color:#f6d886;
-}
 
 
-.heading2 {
-  color: #fab855;
-  font-family: "Gabarito", serif;
-  font-weight: 800;
-  font-size: 2rem;
-  font-style: normal;
-  text-align: center;
-  line-height: 3rem;
-}
-
-header {
-  display: flex;
-  justify-content: space-around;
-}
-header,
-footer {
-  background-color: #ffbecf;
-  text-align: center;
-}
 
 
 /*QUIZ_PAGE*/
-.quiz-content{
-  width:80%;
-  margin:0 10%;
-  background-image: linear-gradient(rgb(46, 45, 43), rgba(0, 0, 0, 0));
-  border-radius: 8px;
-  padding:5% 0;
-}
-.quiz-heading{
-  width:100%;
-}
-.quiz-heading>h1{
-  padding-top:1em;
-  padding-bottom: 0.5em;
-  font-size: 4rem;
-}
-.quiz-heading>h2{
-  padding-bottom: 0.5em;
-}
-.quiz-question-container{
-  width:80%;
-  height:auto;
-  margin:0 auto;
-  padding-bottom:3em;
-  text-align:start;
-}
-.quiz-question{
-  padding-top: 0.5em;
-  padding-bottom: 0.5em;
-  font-size: 1.2em;
-  font-weight: 400;
-  color:#fffbdd;
-}
-.check-answer{
-  display:flex;
-  flex-direction: column;
-  justify-content: center;
-  width:60%;
-  margin:0 20%;
-  padding: 3em 0;
-}
-.check-answer button{
-  background-color: #917bfe;
-  color:#fff;
-  height:2em;
-  width:40%;
-  margin:0 30%;
-  font-size: 1.5rem;
-  font-weight: 800;
-  border-radius: 5px;
-  border-style:none;
-}
-.check-answer button:hover{
-  cursor: pointer;
-  background-color: #5226ef;
-  color:#fff;
+  .quiz-content{
+    width:80%;
+    margin:0 10%;
+    background-image: linear-gradient(rgb(46, 45, 43), rgba(0, 0, 0, 0));
+    border-radius: 8px;
+    padding:5% 0;
+  }
+  .quiz-heading{
+    width:100%;
+  }
+  .quiz-heading>h1{
+    padding-top:1em;
+    padding-bottom: 0.5em;
+    font-size: 4rem;
+  }
+  .quiz-heading>h2{
+    padding-bottom: 0.5em;
+  }
+  .quiz-question-container{
+    width:80%;
+    height:auto;
+    margin:0 auto;
+    padding-bottom:3em;
+    text-align:start;
+  }
+  .quiz-question{
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    font-size: 1.2em;
+    font-weight: 400;
+    color:#fffbdd;
+  }
+  
+  .quiz-question-container select{
+    width:360px;
+    height:30px;
+    border-radius: 10px;
+    text-align: center;
+    font-weight: 700;
+    background-color: #d1d0f3;
+    border:none;
+    color:#2e15adb8;
+  }
+  .quiz-question-container input.number{
+    width:200px;
+    height:30px;
+    border-radius: 10px;
+    text-align: center;
+    background-color: #d1d0f3;
+    border:none;
+  }
+  .quiz-question-container input{
+    width:20px;
+    height:20px;
+    background-color: #d1d0f3;
+    border:none;
+    margin-bottom: 10px;
+  }
+  .quiz-question-container label{
+    font-size: 1.1rem;
+    text-align: center;
+    color: #d1d0f3;
+    margin-right:20px;
+  }
+  .check-answer{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    width:60%;
+    margin:0 20%;
+    padding: 3em 0;
+  }
+  .check-answer button{
+    background-color: #917bfe;
+    color:#fff;
+    height:2em;
+    width:40%;
+    margin:0 30%;
+    font-size: 1.5rem;
+    font-weight: 800;
+    border-radius: 5px;
+    border-style:none;
+  }
+  .check-answer button:hover{
+    cursor: pointer;
+    background-color: #5226ef;
+    color:#fff;
 }
