--- a/halligalli.css
+++ b/halligalli.css
@@ -6,7 +6,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   background-color: #181716;
-  font-family: "Inter", sans-serif;
+  font-family: "Gabarito", sans-serif;
   color: #f2dc6d;
   cursor: default;
   scroll-behavior: smooth;
